fix(content): hide scrollbar only on desktop platform when content doesn't need to scroll

--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -44,6 +44,10 @@ a {
   contain: size style layout;
 }
 
+.platform-core .scroll-content {
+  overflow-y: auto;
+}
+
 ion-content.js-scroll > .scroll-content {
   position: relative;
 
